[package]
name = "x25519"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }   
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4.1", default-features = false }
js-sys = "0.3"


[lib]
crate-type = ["cdylib", "rlib"]
