[package]
name = "xeddsa"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
curve25519-dalek = { version = "4.1", default-features = false }
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
